...

- (UIButton *)showOriginImgBtn {
    if (!_showOriginImgBtn) {
        _showOriginImgBtn = [UIButton buttonWithType:UIButtonTypeCustom];
        [_showOriginImgBtn setBackgroundColor:[UIColor systemRedColor]];
        [_showOriginImgBtn setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];
        [_showOriginImgBtn setTitle:@"Show Origin Image" forState:UIControlStateNormal];
        _showOriginImgBtn.layer.cornerRadius = 4.f;
        _showOriginImgBtn.clipsToBounds = YES;
        [_showOriginImgBtn addTarget:self action:@selector(showOriginImgBtnTapped) forControlEvents:UIControlEventTouchUpInside];
    }
    return _showOriginImgBtn;
}
...

- (UIButton *)showResizedImgBtn {
    if (!_showResizedImgBtn) {
        _showResizedImgBtn = [UIButton buttonWithType:UIButtonTypeCustom];
        [_showResizedImgBtn setBackgroundColor:[UIColor systemGreenColor]];
        [_showResizedImgBtn setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];
        [_showResizedImgBtn setTitle:@"Resized Image by ImageIO." forState:UIControlStateNormal];
        _showResizedImgBtn.layer.cornerRadius = 4.f;
        _showResizedImgBtn.clipsToBounds = YES;
        [_showResizedImgBtn addTarget:self action:@selector(showResizedImgBtnTapped) forControlEvents:UIControlEventTouchUpInside];
    }
    return _showResizedImgBtn;
}
...
